--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <table cellpadding="10">
       <tr>
-        <td><img src="images/Sachchidanand.jpg" alt="Sachchidanand" /></td>
+        <td><img src="Images/Sachchidanand.jpg" alt="Sachchidanand" /></td>
         <td>
           <h1>Sachchidanand Kumar</h1>
           <p>
