--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Me</title>
+    <link rel="stylesheet" href="CSS/style.css" />
   </head>
 
   <body>
@@ -25,6 +26,8 @@
     <hr />
 
     <input type="date" />
+    <br />
+    <br />
     <form
       action="mailto:sachchidanandx@gmail.com"
       method="POST"
