--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
 
     <hr />
 
-    <h3><a href="HTML/contact.html">Contact Me</a></h3>
+    <h3><a href="contact.html">Contact Me</a></h3>
   </body>
 </html>
