--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </tr>
         <tr>
           <td>2016 - 2019</td>
-          <td>Bachloar in Physics from C. M. Science College</td>
+          <td>Bachelor in Physics from C. M. Science College</td>
         </tr>
         <tr>
           <td>2019 - Present</td>
